k8s/apps/dummy/dummy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dummy-service
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  selector:
    app: dummy
  ports:
  - name: dummy-web
    protocol: TCP
    port: 80
    targetPort: dummy-web
